# OOP

./: CMakeLists.txt  Cell.cpp  Cell.h  Controller.cpp  Controller.h  Field.cpp  Field.h  Makefile  Player.cpp  Player.h  game  main.cpp
Events/: Enemy.cpp  FieldEvent.h  PlayerEvent.h  Teleport.cpp  Teleport.h
Field/: Cell.cpp  Cell.h  Field.h  FieldBuilder.cpp  FieldBuilder.h  ShowField.cpp
GameExecution/: GameManager.cpp  GameManager.h  ReadConsoleCmnds.cpp  ReadConsoleCmnds.h  ReadFile.cpp  ReadFile.h
Logging/: Message.h  MessageHandler.cpp  MessageHandler.h  PlayerLost.cpp  ValidCommandPressed.cpp  ValidCommandPressed.h
